--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
   <div class="card">
     <div class="search">
       <input type="text" placeholder="Enter city name" spellcheck="false" />
-      <button><img src="images/search.png" alt="Search" /></button>
+      <button><img src="search.png" alt="Search" /></button>
     </div>
     <div class="error">
       <p>Invalid city name</p>
     </div>
     <div class="weather">
-      <img src="images/rain.png" alt="weather" />
+      <img src="rain.png" alt="weather" />
       <h1 class="temp">22°c</h1>
       <h2 class="city">Indore</h2>
       <div class="details">
         <div class="col">
-          <img src="images/humidity.png" alt="" />
+          <img src="humidity.png" alt="" />
           <div>
             <p class="humidity">50%</p>
             <p>Humidity</p>
           </div>
         </div>
         <div class="col">
-          <img src="images/wind.png" alt="" />
+          <img src="wind.png" alt="" />
           <div>
             <p class="wind">50%</p>
             <p>Wind</p>
@@ -77,19 +77,19 @@
 
         switch (data.weather[0].main) {
           case "Clouds":
-            weatherIcon.src = "images/clouds.png";
+            weatherIcon.src = "clouds.png";
             break;
           case "Clear":
-            weatherIcon.src = "images/clear.png";
+            weatherIcon.src = "clear.png";
             break;
           case "Rain":
-            weatherIcon.src = "images/rain.png";
+            weatherIcon.src = "rain.png";
             break;
           case "Drizzle":
-            weatherIcon.src = "images/drizzle.png";
+            weatherIcon.src = "drizzle.png";
             break;
           case "Mist":
-            weatherIcon.src = "images/mist.png";
+            weatherIcon.src = "mist.png";
             break;
           
         }
